syntax = "proto3";
package pb;

service Raft {
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);

    /* external user command */
    rpc Command (CommandRequest) returns (CommandResponse);
}

message CommandEntry {
    string command = 1;
    repeated string args = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    string candidate_id = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesRequest {
    uint64 term = 1;
    string leader_id = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    repeated CommandEntry entries = 5; // possibly send multiple entries in a batch
    uint64 leader_commit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message CommandRequest {
    CommandEntry entry = 1;
}

message CommandResponse {
    string result = 1;
}
